fixed width of search bar on mobile

--- a/assets/scss/pages/_search.scss
+++ b/assets/scss/pages/_search.scss
@@ -74,5 +74,11 @@
       min-width: 100%;
       padding-left: 0;
     }
+
+    .search-submit {
+      position: absolute;
+      right: 1px;
+      top: 4px;
+    }
   }
 }
